# django_current_usd

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app_stock_observer/: admin.py  apps.py  models.py  urls.py  views.py
app_stock_observer/management/commands/: admin_init.py  get_current_usd.py
app_stock_observer/migrations/: 0001_initial.py
core/: settings.py  urls.py
nginx/: nginx.conf
